--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -257,7 +257,7 @@ header {
           flex-direction: stretch;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  background: url(../assets/headerBG.jpg);
+  background: url(../assets//header.jpg);
   background-size: cover;
   background-position: center;
 }
