Update the code

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,10 +11,10 @@
 }
 
 // vars
-$themeColor: #f9004d;
-$themeSecondary: #f81f03;
-$bgColor: #191919;
-$bgSecondary: #101010;
+$themeColor: #2563eb;
+$themeSecondary: #1d4ed8;
+$bgColor: #f1f5f9;
+$bgSecondary: #e2e8f0;
 
 * {
   margin: 0;
